# zxc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build.yml
Client/: CMakeLists.txt  Client.cpp  main.cpp
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
modules/: FindAssimp.cmake  FindMagnumPlugins.cmake
resources/: crocodil.fbx  crocodil_color.tga  nevermore.fbx  nevermore_blender.fbx  nevermore_blender_raw.fbx  yasher.fbx  yasher_color.tga
resources/materials/.mayaSwatches/: shadow_fiend_arms_color.tga_hcm.swatch  shadow_fiend_arms_specularMask.tga_hcm.swatch  shadow_fiend_head_color.tga_hcm.swatch  shadow_fiend_head_specularMask.tga_hcm.swatch  shadow_fiend_shoulder_color.tga_hcm.swatch  shadow_fiend_shoulder_specularMask.tga_hcm.swatch  shadow_fiend_wings_color.tga_hcm.swatch  shadow_fiend_wings_specularMask.tga_hcm.swatch
src/: CMakeLists.txt  Drawables.cpp  Drawables.h  MyApplication.cpp  UnitDrawable.cpp  UnitDrawable.h  zxc.cpp  zxc.h
src/Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
src/Events/: Events.cpp  Events.h
src/Game/: Attack.cpp  Attack.h  Buff.h  CMakeLists.txt  Creep.cpp  Creep.h  Event.cpp  Event.h  GameState.cpp  GameState.h  GameStateHandler.cpp  GameStateHandler.h  GameStateServer.h  Hero.cpp  Hero.h  Item.h  Point.cpp  Point.h  Position.cpp  Position.h  Skill.cpp  Skill.h  Skills.cpp  Skills.h  Stats.cpp  Stats.h  StatsBuilder.cpp  StatsBuilder.h  Unit.cpp  Unit.h  main.cpp
src/Graphics/: Drawables.cpp  Drawables.h  EventHandlers.cpp  EventHandlers.h  GoldPlane.cpp  GoldPlane.h  GraphicsHandler.cpp  GraphicsHandler.h  ModelLoader.cpp  ModelLoader.h  PluginLibrary.cpp  PluginLibrary.h  Resources.h  ShaderLibrary.cpp  ShaderLibrary.h  Types.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/Utils/: BufferIO.cpp  BufferIO.h  Utils.h
src/common/Events/: Events.cpp  Events.h
src/common/Game/: Attack.cpp  Attack.h  Buff.cpp  Buff.h  Creep.cpp  Creep.h  GameState.cpp  GameState.h  Hero.cpp  Hero.h  Item.cpp  Item.h  Point.cpp  Point.h  Position.cpp  Position.h  Skills.cpp  Stats.cpp  Stats.h  StatsBuilder.h  Unit.cpp  Unit.h
src/common/Utils/: BufferIO.cpp  BufferIO.h  Utils.h
src/shared/Events/: Events.cpp  Events.h
src/shared/Game/: Attack.cpp  Attack.h  Creep.cpp  Creep.h  GameState.cpp  GameState.h  Hero.cpp  Hero.h  Item.cpp  Item.h  Point.cpp  Position.cpp  Skills.cpp  Skills.h  Stats.cpp  Stats.h  Unit.cpp  Unit.h
src/shared/Utils/: BufferIO.cpp  BufferIO.h  Utils.h
src/zxc/: zxc.cpp  zxc.h
src/zxc-server/: Server.cpp  Server.h  main.cpp
src/zxc/Client/: Client.cpp  Client.h
src/zxc/Graphics/: Drawables.cpp  Drawables.h  GoldPlane.cpp  GoldPlane.h  GraphicsHandler.cpp  GraphicsHandler.h  ModelLoader.cpp  ModelLoader.h  PluginLibrary.cpp  PluginLibrary.h  Resources.h  ShaderLibrary.cpp  ShaderLibrary.h  Types.h
